--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 
 	--bg-active-ecopoint: rgb(0, 88, 21);
 	--bg-active-lieux_interet: rgb(25, 36, 255);
+	--bg-active-transport: #4b2501transport_modal_pointer--reversed;
 
 	--icon-close-color-lieux_interet: rgb(255, 94, 94);
 
@@ -409,14 +410,13 @@ a {
 	left: 320px;
 }
 
-
 .transport_icon {
 	width: 70px;
 	margin-right: 5px;
 }
 
 .active-transport {
-	fill: var(--bg-active-ecopoint) !important;
+	fill: var(--bg-active-transport) !important;
 }
 
 /* Helper */
