--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@
 
 	--bg-active-ecopoint: rgb(0, 88, 21);
 	--bg-active-lieux_interet: rgb(25, 36, 255);
-	--bg-active-transport: #4b2501transport_modal_pointer--reversed;
+	--bg-active-transport: #411f00;
 
 	--icon-close-color-lieux_interet: rgb(255, 94, 94);
 
 	--hover-close-icon-lieux_interet: rgb(254, 74, 74);
 	--hover-close-icon-ecopoints: rgb(255, 187, 187);
+	--show-location-list: #86a7bc;
 }
 
 * {
@@ -26,28 +27,67 @@
 
 /* map */
 
-body{
+body {
 	overflow: hidden;
-    margin: 0;
+	margin: 0;
 }
 
 .graph {
-    position: relative;
-    display: block;
-    overflow: hidden;
-    left: 0;
-    top: 0;
-    width: 100%;
-    cursor: all-scroll;
+	position: relative;
+	display: block;
+	overflow: hidden;
+	left: 0;
+	top: 0;
+	width: 100%;
+	cursor: all-scroll;
 }
 
 .graph:before {
-    content: "";
-    padding-top: 70.71%;
-    display: block;
+	content: "";
+	padding-top: 70.71%;
+	display: block;
 }
 
 /* PANEL */
+.panel-hide {
+	transform: translateX(-100vw);
+	transition: 1s;
+}
+
+.panel-show {
+	transform: translateX(0);
+	transition: 1s;
+}
+
+#container-hide-panel {
+	cursor: pointer;
+	position: absolute;
+	top: 20px;
+	right: 0;
+}
+
+#container-show-panel {
+	cursor: pointer;
+	z-index: 1;
+	position: absolute;
+	top: 20px;
+	left: 20px;
+	background-color: var(--primary);
+	padding: 15px;
+	border-radius: 100%;
+}
+
+#icon-hide-panel {
+	fill: white;
+	width: 30px;
+	height: 30px;
+}
+
+#icon-show-panel {
+	fill: white;
+	width: 30px;
+	height: 30px;
+}
 
 #panel {
 	display: flex;
@@ -61,10 +101,10 @@ body{
 }
 
 #panel-container {
+	position: relative;
 	display: flex;
-    justify-content: center;
+	justify-content: center;
 	align-items: center;
-  
 }
 
 #panel-ul {
@@ -84,7 +124,6 @@ body{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	
 }
 
 #panel-container li {
@@ -100,7 +139,8 @@ body{
 	color: var(--text);
 }
 
-.panel-icon-eye-close, .panel-icon-eye-open {
+.panel-icon-eye-close,
+.panel-icon-eye-open {
 	width: 30px;
 	margin-right: 10px;
 }
@@ -115,12 +155,11 @@ body{
 }
 
 .panel-subitem-location {
-
 }
 
-.panel-subitem-location--svg circle{
-	fill: rgb(255, 78, 178) !important;
-	transition: .5s;
+.panel-subitem-location--svg circle {
+	fill: var(--show-location-list) !important;
+	transition: 0.5s;
 }
 
 .panel-item-extensible {
@@ -128,7 +167,7 @@ body{
 	flex-direction: column;
 }
 
-.panel-item-extensible li{
+.panel-item-extensible li {
 	margin-bottom: 10px !important;
 	color: white;
 }
@@ -148,7 +187,6 @@ body{
 }
 
 .panel-item {
-
 }
 
 .panel-item--active {
@@ -160,36 +198,36 @@ body{
 }
 
 #troinex {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 a {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 .button-container {
 	display: flex;
-    position: fixed;
-    z-index: 999;
-    bottom: 10px;
-    right: 10px;
+	position: fixed;
+	z-index: 999;
+	bottom: 10px;
+	right: 10px;
 }
 
 .button-container .button {
-    display: flex;
+	display: flex;
 	justify-content: center;
 	align-items: center;
-    width: 38px;
-    height: 38px;
-    font-size: 30px;
-    line-height: 28px;
-    text-align: center;
-    background: #0078C1;
-    color: var(--text);
+	width: 38px;
+	height: 38px;
+	font-size: 30px;
+	line-height: 28px;
+	text-align: center;
+	background: #0078c1;
+	color: var(--text);
 }
 
 #zoomIn {
@@ -200,7 +238,6 @@ a {
 #zoomOut {
 	border-radius: 0 10px 10px 0;
 }
-
 
 /* rest */
 .hide {
@@ -336,7 +373,6 @@ a {
 	left: 320px;
 }
 
-
 .ecopoint_icon {
 	width: 70px;
 	margin-right: 5px;
@@ -346,8 +382,8 @@ a {
 	fill: var(--bg-active-ecopoint) !important;
 }
 
-
 /* TRANSPORTS */
+
 #TRANSPORTS {
 	cursor: pointer;
 }
