--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 .graph {
 	position: relative;
 	display: block;
-	overflow: hidden;
+	/* overflow: hidden; */
 	left: 0;
 	top: 0;
 	width: 100%;
@@ -113,6 +113,10 @@ body {
 
 #panel-ul {
 	height: 100vh;
+	padding-left: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 #panel-container li {
@@ -121,13 +125,6 @@ body {
 
 #panel-container li:hover {
 	color: var(--text-hover);
-}
-
-#panel-container ul {
-	padding-left: 0;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
 }
 
 #panel-container li {
@@ -574,4 +571,70 @@ a {
 .btn--disabled {
 	background-color: lightgray !important;
 	color: gray;
+}
+
+@media only screen and (max-width: 768px) {
+	#panel {
+		display: flex;
+		justify-content: center;
+		z-index: 2;
+		position: absolute;
+		bottom: 0;
+		top: 50vh;
+		width: 100vw;
+		background-color: var(--primary);
+	}
+
+	#panel-container {
+		position: relative;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		align-items: center;
+	}
+
+	#panel-ul {
+		height: 100%;
+		width: 80vw;
+		padding-left: 0;
+		display: flex;
+
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	#panel-item-locations ul {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+	}
+
+	.panel-subitem-location {
+		font-size: 0.750rem;
+	}
+
+	.panel-item-extensible-number {
+		background-color: transparent;
+		color: white !important;
+		font-size: 1rem !important;
+	}
+
+	.panel-item-extensible-number::after {
+		content: ".";
+	}
+	
+	#panel-container li {
+		list-style: none;
+		margin-bottom: 10px;
+		display: flex;
+		align-items: center;
+	}
+
+	#panel-container li span {
+		font-size: 1rem;
+	
+		color: var(--text);
+	}
+
+	
 }
