--- a/style.css
+++ b/style.css
@@ -501,12 +501,6 @@ a {
 		right: -20px !important;
 	}
 
-	.ecopoint_modal {
-		top: 20px !important;
-		right: 20px !important;
-		width: 200px !important;
-	}
-
 	#panel {
 		top: 45vh;
 		width: 100vw;
@@ -516,17 +510,7 @@ a {
 		display: none;
 	}
 
-	.modal_pointer, .ecopoint_modal_pointer, .transport_modal_pointer  {
-		display: none;
-	}
-
 	/* location */
-	.lieu_interet_modal {
-		width: 200px !important;
-		right: 20px;
-		top: 20px;
-	}
-
 	.lieu_interet_image {
 		height: 100px;
 	}
@@ -545,17 +529,11 @@ a {
 		font-size: 1rem;
 		margin: 5px 0;
 	}
-	/* transports */
-	.transport_modal {
-		width: 200px;
-		right: 20px;
-		top: 20px;
-	}
 
+	/* transports */
 	.transport_titre {
 		font-size: 0.850rem;
 	}
-
 
 	.panel-item-extensible-number {
 		background-color: transparent;
@@ -583,7 +561,6 @@ a {
 }
 
 @media only screen and (max-width: 768px) {
-
 	.graph:before {
 		padding-top: 86.71% !important;
 	}
@@ -611,8 +588,6 @@ a {
 		justify-content: center;
 	}
 
-
-
 	.panel-subitem-location {
 		font-size: 0.650rem;
 	}
@@ -621,16 +596,8 @@ a {
 		margin-bottom: 0px !important;
 	}
 
-	
-
 	.panel-item-label {
 		font-size: 1.4rem !important;	
-	}
-
-	.ecopoint_modal {
-		top: 20px !important;
-		right: 20px !important;
-		width: 200px;
 	}
 
 	.ecopoint_modal .ecopoint_titre {
@@ -644,15 +611,19 @@ a {
 	.ecopoint_icons img {
 		width: 60px;
 	}
-	
-	.lieu_interet_modal {
-		width: 250px;
-		right: 20px;
-		top: 20px;
-	}
 }
 
 @media only screen and (max-width: 576px) {
+
+	.modal_pointer, .ecopoint_modal_pointer, .transport_modal_pointer  {
+		display: none;
+	}
+
+	.ecopoint_modal, .lieu_interet_modal, .transport_modal {
+		top: 20px !important;
+		right: 20px !important;
+		width: 200px !important;
+	}
 
 	.ecopoint_modal {
 		top: 20px !important;
