--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@font-face {
+	font-family: "Geometo";
+	src: local("Geometo"),
+	  url("./assets/fonts/geometos_rounded-webfont.woff");
+  }
+
 :root {
 	--primary: #0077c1;
 	--text: white;
@@ -13,10 +19,10 @@
 	--bg-active-lieux_interet: #005082;
 	--bg-active-transport: #411f00;
 
-	--icon-close-color-lieux_interet: rgb(255, 94, 94);
+	--icon-close-color-lieux_interet: rgb(255, 255, 255);
 
-	--hover-close-icon-lieux_interet: rgb(254, 74, 74);
-	--hover-close-icon-ecopoints: rgb(255, 187, 187);
+	--hover-close-icon-lieux_interet: rgb(255, 255, 255);
+	--hover-close-icon-ecopoints: rgb(255, 255, 255);
 	--show-location-list: #86a7bc;
 }
 
@@ -24,6 +30,10 @@
 	font-family: Arial, Helvetica, sans-serif;
 	user-select: none;
 }
+.neighborhood {
+	font-family: "Geometo", Arial, Helvetica, sans-serif !important;
+}
+
 
 /* map */
 body {
