continue to  compact panel

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ body {
 	position: absolute;
 	top: 0;
 	bottom: 0;
-	width: 25vw;
+	width: 22vw;
 	background-color: var(--primary);
 }
 
@@ -123,6 +123,11 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+}
+
+.panel-item {
+	margin-bottom: 15px!important;
+
 }
 #panel-container li {
 	cursor: pointer;
